whisply-rs/tui/src/status/snapshots/whisply_tui__status__tests__managed_status_usage_meters.snap
---
source: tui/src/status/tests.rs
expression: rendered
---
/status

╭───────────────────────────────────────────────────────────────────────────────────╮
│  >_ Whisply (v0.147.0-wsply.1)                                                    │
│                                                                                   │
│  Run whisply usage for up-to-date                                                 │
│  limits, resets, and rate card                                                    │
│                                                                                   │
│  Model:                  gpt-5.6-sol (reasoning none, summaries auto)             │
│  Model provider:         Whisply                                                  │
│  Directory:              ~/Whisply for Mac/Runtime/whisply-codex/whisply-rs/tui     │
│  Permissions:            Custom (workspace with network access, Ask for approval) │
│  Agents.md:              <none>                                                   │
│                                                                                   │
│  Token usage:            0 total  (0 input + 0 output)                            │
│  5h limit:               [███████████░░░░░░░░░] 53% left (resets 07:00)           │
│                          settled 4.200, reserved 0.500, cap 10.000                │
│  Weekly limit:           [██████████████████░░] 89% left (resets 07:00)           │
│                          settled 10.000, reserved 1.000, cap 100.000              │
│  Transcription weekly:   [███████████████████░] 95% left (resets 07:00)           │
│                          settled 1.000, reserved 0.000, cap 20.000                │
│  Rate card:              rate-card-9 · model_cost_weighted USD                    │
╰───────────────────────────────────────────────────────────────────────────────────╯
