whisply-rs/tui/src/status/snapshots/whisply_tui__status__tests__status_snapshot_shows_active_user_defined_profile.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

╭───────────────────────────────────────────────────────────────────────╮
│  >_ Whisply (v0.147.0-wsply.1)                                        │
│                                                                       │
│  Run whisply usage for up-to-date                                     │
│  limits, resets, and rate card                                        │
│                                                                       │
│  Model:            gpt-5.1-codex-max (reasoning none, summaries auto) │
│  Model provider:   Whisply                                            │
│  Directory: [[workspace]]                                             │
│  Permissions:      Profile locked (read-only, Ask for approval)       │
│  Agents.md:        <none>                                             │
│                                                                       │
│  Usage:            data not available yet                             │
╰───────────────────────────────────────────────────────────────────────╯
